changed to use base files in maven-base

--- a/astrogrid/jes/project.properties
+++ b/astrogrid/jes/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.17 2003/12/14 14:14:24 jdt Exp $
+# $Id: project.properties,v 1.18 2004/02/02 17:36:32 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -52,10 +52,7 @@ maven.test.failure.ignore=true
 maven.junit.fork=true
 
 # Checkstyle file
-maven.checkstyle.properties=${basedir}/../maven-site/checkstyle.xml
-
-#javadoc. -- fill this in.
-maven.javadoc.links=http://www.astrogrid.org/maven/build/mySpace/apidocs/,http://www.astrogrid.org/maven/build/common/apidocs/,http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
+maven.checkstyle.properties=${basedir}/../maven-base/checkstyle.xml
 
 #multiproject
 # continue with others if one fails
