does this work?

--- a/astrogrid/astrogrid-project-version.properties
+++ b/astrogrid/astrogrid-project-version.properties
@@ -1,6 +1,6 @@
 ace=<CVS_TAG>
 applications=AVODemoJan2004
-common=<CVS_TAG>
+common=Itn04-2003-10-31
 community=<CVS_TAG>
 datacenter=It04-2003-11-21
 jes=Itn04_CodeFreeze
