changed location of myspace

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,4 +1,4 @@
-mySpaceEndPoint = http://vm06.astrogrid.org:8080/intTest-mySpace/services/MySpaceManager
+mySpaceEndPoint = http://uml01.astrogrid.org:8080/intTest-mySpace/services/MySpaceManager
 merlinDatacenterEndPoint=http://vm07.astrogrid.org:8080/pal/services/AxisDataServer
 
 
