New tests to test the saveDataHolding Feature

--- a/astrogrid/integrationTests/test/java/log4j.properties
+++ b/astrogrid/integrationTests/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.1 2003/12/31 18:53:36 jdt Exp $
+# $Id: log4j.properties,v 1.2 2004/02/14 20:20:52 jdt Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -8,7 +8,8 @@
 #
 # Set root category priority to FATAL and its only appenders to CONSOLE and a logfile LOGFILE.
 # Change OFF to DEBUG for more detailed logging
-log4j.rootCategory=ERROR, CONSOLE
+log4j.rootCategory=OFF, CONSOLE
+log4j.logger.org.astrogrid.integrationTests.mySpace.SimpleMySpaceTest=DEBUG
 
 
 #### CONSOLE is set to be a ConsoleAppender using a PatternLayout.
