--- a/astrogrid/integrationTests/test/java/log4j.properties
+++ b/astrogrid/integrationTests/test/java/log4j.properties
@@ -1,4 +1,4 @@
-# $Id: log4j.properties,v 1.2 2004/02/14 20:20:52 jdt Exp $
+# $Id: log4j.properties,v 1.3 2004/02/16 15:53:17 jdt Exp $
 # Author: JDT
 ############################################################################################
 #
@@ -10,6 +10,7 @@
 # Change OFF to DEBUG for more detailed logging
 log4j.rootCategory=OFF, CONSOLE
 log4j.logger.org.astrogrid.integrationTests.mySpace.SimpleMySpaceTest=DEBUG
+log4j.logger.org.astrogrid.integrationTests.mySpace.MySpaceWiper=DEBUG
 
 
 #### CONSOLE is set to be a ConsoleAppender using a PatternLayout.
