--- a/astrogrid/astrogrid-project-version.properties
+++ b/astrogrid/astrogrid-project-version.properties
@@ -1,16 +1,17 @@
 ace=<CVS_TAG>
-applications=AVODemoJan2004
-common=Itn04-2003-10-31
-community=<CVS_TAG>
-datacenter=It04-2003-11-21
-jes=Itn04_CodeFreeze
-maven-site=<CVS_TAG>
-mySpace=Itn04_CodeFreeze
+applications=Itn04_1
+common=Itn04_1
+community=Itn04_1
+datacenter=Itn04_1
+jes=Itn04_1
+maven-base=Itn04_1
+maven-site=Itn04_1
+mySpace=Itn04_1
 ogsa=<CVS_TAG>
-portalB=<CVS_TAG>
-registry=<CVS_TAG>
+portal=Itn04_1
+registry=Itn04_1
 templateservice=<CVS_TAG>
 tools=<CVS_TAG>
 ui=<CVS_TAG>
-warehouse=<Itn04-2003-11-07>
-workflow=Itn03_end
+warehouse=Itn04_1
+workflow=Itn04_1
