--- a/astrogrid/common/project.properties
+++ b/astrogrid/common/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.5 2003/12/14 14:14:39 jdt Exp $
+# $Id: project.properties,v 1.6 2004/02/18 21:24:21 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
@@ -34,7 +34,7 @@ maven.test.failure.ignore=true
 maven.junit.fork=true
 
 # Checkstyle file
-maven.checkstyle.properties=${basedir}/../maven-site/checkstyle.xml
+maven.checkstyle.properties=${basedir}/../maven-base/checkstyle.xml
 
 #javadoc. -- fill this in.
 maven.javadoc.links=http://www.astrogrid.org/maven/build/mySpace/apidocs/,http://www.astrogrid.org/maven/build/jes/apidocs/,http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/,http://jakarta.apache.org/commons/logging/api/
