--- a/astrogrid/datacenter/client/project.properties
+++ b/astrogrid/datacenter/client/project.properties
@@ -7,3 +7,6 @@ maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
 #javadoc setup
 maven.javadoc.overview=${basedir}/src/java/org/astrogrid/datacenter/delegate/overview.html
 
+# Checkstyle file - not at all sure about the location bit... (MCH)
+maven.checkstyle.properties=${project.home}/build/checkstyle.xml
+
