--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
@@ -1,13 +1,20 @@
-# Set root category priority to INFO and its only appender to CONSOLE.
-log4j.rootCategory=DEBUG, LOGFILE
+# Set root category (ie default)
+log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
 
-# Set the enterprise logger category to FATAL and its only appender to CONSOLE.
+# Set the enterprise logger
 log4j.logger.org.apache.axis.enterprise=FATAL, LOGFILE
 
+# CONSOLE goes to catalina.out
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.Threshold=INFO
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%d PAL: %p %m%n
+
 # LOGFILE is set to be a File appender using a PatternLayout.
+# We don't append as it's a low level log and would become big very quickly
 log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-log4j.appender.LOGFILE.File=pal-snapshot.log
+log4j.appender.LOGFILE.File=pal.log
 log4j.appender.LOGFILE.Append=true
-log4j.appender.LOGFILE.Threshold=INFO
+log4j.appender.LOGFILE.Threshold=DEBUG
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.LOGFILE.layout.ConversionPattern=%d %-4r [%t] %-5p %c %x - %m%n
