Tweaked debug option

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
@@ -1,8 +1,8 @@
 # Set root category (ie default)
-log4j.rootCategory=DEBUG, CONSOLE, LOGFILE
+log4j.rootCategory=DEBUG, CONSOLE, DEBUGLOG, LONGLOG
 
 # Set the enterprise logger
-log4j.logger.org.apache.axis.enterprise=FATAL, LOGFILE
+log4j.logger.org.apache.axis.enterprise=FATAL, LONGLOG
 
 # CONSOLE goes to catalina.out
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -10,11 +10,21 @@ log4j.appender.CONSOLE.Threshold=INFO
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d PAL: %p %m%n
 
-# LOGFILE is set to be a File appender using a PatternLayout.
-# We don't append as it's a low level log and would become big very quickly
-log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-log4j.appender.LOGFILE.File=pal.log
-log4j.appender.LOGFILE.Append=true
-log4j.appender.LOGFILE.Threshold=DEBUG
-log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.LOGFILE.layout.ConversionPattern=%d %-4r [%t] %-5p %c %x - %m%n
+# DEBUGLOG is a rolling file logger that records debug-level info
+log4j.appender.DEBUGLOG=org.apache.log4j.RollingFileAppender
+log4j.appender.DEBUGLOG.File=pal-debug.log
+log4j.appender.DEBUGLOG.Append=true
+log4j.appender.DEBUGLOG.Threshold=DEBUG
+log4j.appender.DEBUGLOG.layout=org.apache.log4j.PatternLayout
+log4j.appender.DEBUGLOG.layout.ConversionPattern=%d{HH:mm:ss} %-4r [%t] %-5p %c %x - %m%n
+log4j.appender.DEBUGLOG.MaxFileSize=400KB
+log4j.appender.DEBUGLOG.MaxBackupIndex=1
+
+# LONGLOG is a file logger that records info-level info
+log4j.appender.LONGLOG=org.apache.log4j.FileAppender
+log4j.appender.LONGLOG.File=pal.log
+log4j.appender.LONGLOG.Append=true
+log4j.appender.LONGLOG.Threshold=INFO
+log4j.appender.LONGLOG.layout=org.apache.log4j.PatternLayout
+log4j.appender.LONGLOG.layout.ConversionPattern=%d{dd-MM-yy HH:mm:ss} %-4r [%t] %-5p - %m%n
+
