Removed axis debug messages

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
@@ -1,14 +1,22 @@
+# Datacenter logging properties file
+# Logs INFO output to console (--> catalina.out), INFO to pal.log, and DEBUG
+# to a rolling log file pal-debug.log
+# -mch
+
 # Set root category (ie default)
 log4j.rootCategory=DEBUG, CONSOLE, DEBUGLOG, LONGLOG
 
 # Set the enterprise logger
-log4j.logger.org.apache.axis.enterprise=FATAL, LONGLOG
+log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE, DEBUGLOG, LONGLOG
+
+# ignore debug axis messages
+log4j.category.org.apache.axis=WARN, CONSOLE, DEBUGLOG, LONGLOG
 
 # CONSOLE goes to catalina.out
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Threshold=INFO
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%d PAL: %p %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{dd-MM-yy HH:mm:ss} PAL: %p %m%n
 
 # DEBUGLOG is a rolling file logger that records debug-level info
 log4j.appender.DEBUGLOG=org.apache.log4j.RollingFileAppender
