...work in progress

--- a/mavenTemplates/SimpleMavenProject/project.properties
+++ b/mavenTemplates/SimpleMavenProject/project.properties
@@ -5,7 +5,8 @@
 # ---the Cambridge one is used by Dave et all for experimental stuff
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/, http://astrogrid.ast.cam.ac.uk/maven
 
-maven.license.licenseFile=${basedir}/LICENSE.txt
+#Standard License shared by projects
+maven.license.licenseFile=${basedir}/../maven-base/LICENSE.txt
 
 # ChangeLog - number of days to list in changelog report.
 maven.changelog.range=31
