Added GDW properties to default sample config file.

--- a/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
+++ b/astrogrid/datacenter/pal/xdocs/AstroGridConfig.properties
@@ -13,7 +13,12 @@
 ###
 
 ### If your implementation extends Querier, specify the full class name here.
-#DatabaseQuerierClass=
+### E.g to use OGSA-DAI Grid Data Warehouse plugin, uncomment:
+
+#DatabaseQuerierClass=org.astrogrid.datacenter.queriers.ogsadai.WarehouseQuerier
+
+### and then DON'T use QuerierSPI property below.
+
 
 ### If your implementation implements the QuerierSPI interface, set DatabaseQuerier as follows
 DatabaseQuerierClass=org.astrogrid.datacenter.queriers.spi.PluginQuerier
@@ -69,6 +74,32 @@ DefaultMySpace=http://uml01.astrogrid.org:8080/axis/services/MySpaceManager
 WorkspaceDirectory=/tmp
 
 
+### -----------------------------------------------------------
+### GRID DATA WAREHOUSE QUERIER PLUGIN CONFIGURATION 
+### Only required if using org.astrogrid.datacenter.queriers.WarehouseQuerier 
+### as the DatabaseQuerierClass above
+
+### Location of OGSA-DAI grid service registry
+### Customise this to match your OGSA-DAI installation.
+WAREHOUSE_OgsaDaiHostString=http://hydra.star.le.ac.uk:8082
+WAREHOUSE_OgsaDaiRegistryString=/gdw/services/ogsadai/DAIServiceGroupRegistry
+                                                                                
+### Location of XSLT stylesheet for XML RowSet -> VOTable transformation
+### This is a one-size-fits-all hack that will need replacing.
+WAREHOUSE_XslTransform=http://astrogrid.ast.cam.ac.uk/xslt/ag-warehouse-first.xsl
+
+### Location of JVM for shelling out to GdsQueryDelegate
+### If using the JVM in tomcat's JAVA_HOME is acceptable, leave this
+### commented out; only supply it if you want to use a custom JVM
+### for some reason.
+# WAREHOUSE_WarehouseJvm=/data/cass123a/kea/j2sdk1.4.1_01/bin/java
+
+### Location of executable jar for shelled-out ogsadai call
+### This is distributed in the datacenter WAR file in the WEB-INF/classes
+### directory;  set the WAREHOUSE_ExecutableJarPath to match your installation.
+WAREHOUSE_ExecutableJarPath=/home/data/gdw/tomcat1/webapps/pal-SNAPSHOT/WEB-INF/classes/
+WAREHOUSE_ExecutableJarName=astrogrid-ogsadai-app-SNAPSHOT.jar
+
 
 ####################################################################
 ###
@@ -89,11 +120,3 @@ WorkspaceDirectory=/tmp
 
 ##additional connection properties
 #DatabaseQuerier.ConnectionProperties=
-
-
-
-
-
-
-
-
