--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -39,10 +39,11 @@ maven.tasklist.taskTag=@TODO
 maven.junit.fork=true
 
 # Checkstyle file
-maven.checkstyle.properties=${basedir}/checkstyle.xml
+maven.checkstyle.properties=${basedir}/../maven-base/checkstyle.xml
 
 #javadoc. -- fill this in.
 maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apache.org/apidocs/
+maven.javadoc.overview=${basedir}/src/java/org/astrogrid/applications/overview.html
 
 #multiproject
 # continue with others if one fails
