--- a/astrogrid/maven-base/project.properties
+++ b/astrogrid/maven-base/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.3 2004/02/18 21:14:07 jdt Exp $
+# $Id: project.properties,v 1.4 2004/03/03 11:36:50 nw Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -61,3 +61,18 @@ maven.multiproject.ignoreFailures=true
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+
+#Improvements to Javadoc
+maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://www.astrogrid.org/maven/build/common/apidocs/, http://www.astrogrid.org/maven/build/astrogrid-workflow-objects/apidocs/, http://www.astrogrid.org/maven/build/jes/apidocs/, http://www.astrogrid.org/maven/build/registry/apidocs/, http://www.astrogrid.org/maven/build/datacenter/multiproject/astrogrid-datacenter-client/apidocs/, http://www.astrogrid.org/maven/build/datacenter/multiproject/astrogrid-datacenter-server/apidocs/, http://ws.apache.org/axis/java/apiDocs/, http://jakarta.apache.org/commons/logging/api/, http://www.cs.umb.edu/~ram/courses/cs639/SOFTWARE/castor/doc/javadoc/, http://www.junit.org/junit/javadoc/3.8/, http://jakarta.apache.org/log4j/docs/api/,
+maven.javadoc.customtags=tag1 tag2 tag3
+tag1.name=todo
+tag1.description=To Do:
+tag1.enabled=true
+tag1.scope=all
+tag2.name=future
+tag2.description=Future:
+tag2.enabled=true
+tag3.name=modified
+tag3.description=Modified:
+tag3.enabled=true
+tag3.scope=all
