This check-in is a result of a merge between HeAD and Itn05_2004-27-02_Reg sorry normally put my initials "kmb" in the branch name, but forgot this time.

--- a/astrogrid/registry/client/project.properties
+++ b/astrogrid/registry/client/project.properties
@@ -7,3 +7,6 @@
 # Multiproject artifact type.
 maven.multiproject.type=jar
 
+org.astrogrid.config.filename=file:///${basedir}/config/config.prop
+maven.junit.sysproperties=org.astrogrid.config.filename
+
