--- a/astrogrid/maven-site/project.properties
+++ b/astrogrid/maven-site/project.properties
@@ -14,3 +14,5 @@ maven.ui.banner.background=#00f
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+
+maven.xdoc.version = ${pom.currentVersion}
