--- a/astrogrid/maven-site/project.properties
+++ b/astrogrid/maven-site/project.properties
@@ -16,3 +16,6 @@ maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 
 maven.xdoc.version = ${pom.currentVersion}
+maven.xdoc.includeProjectDocumentation=No
+
+
