--- a/astrogrid/maven-site/project.properties
+++ b/astrogrid/maven-site/project.properties
@@ -1,6 +1,8 @@
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
 
+maven.license.licenseFile=${basedir}/../maven-base/LICENSE.txt
+
 # ChangeLog
 maven.changelog.range=31
 
