added the group id

--- a/astrogrid/applications/project.properties
+++ b/astrogrid/applications/project.properties
@@ -52,6 +52,7 @@ maven.multiproject.ignoreFailures=true
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
 
 #things that do not seem to be set in all contexts
 maven.test.dest=${basedir}/target/test-classes
