added version to properties

--- a/astrogrid/common/project.properties
+++ b/astrogrid/common/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.6 2004/02/18 21:24:21 jdt Exp $
+# $Id: project.properties,v 1.7 2004/03/04 11:19:18 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
@@ -46,5 +46,6 @@ maven.multiproject.ignoreFailures=true
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
 
 
