changed location of licence

--- a/astrogrid/mySpace/project.properties
+++ b/astrogrid/mySpace/project.properties
@@ -1,9 +1,9 @@
-# $Id: project.properties,v 1.11 2004/02/16 12:30:41 jdt Exp $
+# $Id: project.properties,v 1.12 2004/03/04 18:36:05 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/, http://astrogrid.ast.cam.ac.uk/maven
 
-maven.license.licenseFile=${basedir}/LICENSE.txt
+maven.license.licenseFile=${basedir}/../maven-base/LICENSE.txt
 
 # ChangeLog
 maven.changelog.range=31
