small changes this is a result of a merge with kmb_06-03-03-2004_Reg

--- a/astrogrid/registry/client/project.properties
+++ b/astrogrid/registry/client/project.properties
@@ -8,6 +8,7 @@
 maven.multiproject.type=jar
 
 org.astrogrid.config.url=file:///${basedir}/config/config.prop
+org.astrogrid.registry.cache.url=file:///${basedir}/config/cache
 org.astrogrid.registry.junitcache.url=file:///${basedir}/config/junitcache
-maven.junit.sysproperties=org.astrogrid.config.url org.astrogrid.registry.junitcache.url
+maven.junit.sysproperties=org.astrogrid.config.url org.astrogrid.registry.junitcache.url org.astrogrid.registry.cache.url
 
