--- a/astrogrid/portal/base/project.properties
+++ b/astrogrid/portal/base/project.properties
@@ -34,3 +34,4 @@ maven.war.src=${basedir}/site
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
