--- a/astrogrid/portal/common/project.properties
+++ b/astrogrid/portal/common/project.properties
@@ -35,3 +35,4 @@ maven.war.src=${basedir}/site
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
