--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -37,3 +37,4 @@ maven.multiproject.excludes=project.xml,explorer/project.xml,subproject-template
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
