results of hte mergve between KMB_-06-03-2004_Reg_2

--- a/astrogrid/registry/server/project.properties
+++ b/astrogrid/registry/server/project.properties
@@ -5,3 +5,8 @@
 # Multiproject artifact type.
 maven.multiproject.type=jar
 
+org.astrogrid.config.url=file:///${basedir}/config/config.prop
+org.astrogrid.registry.junitcache.url=file:///${maven.build.dir}/junit/xml
+maven.junit.sysproperties=org.astrogrid.config.url org.astrogrid.registry.junitcache.url
+
+
