--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
@@ -20,7 +20,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{dd-MM-yy HH:mm:ss} PAL: %p %m
 
 # DEBUGLOG is a rolling file logger that records debug-level info
 log4j.appender.DEBUGLOG=org.apache.log4j.RollingFileAppender
-log4j.appender.DEBUGLOG.File=pal-debug.log
+log4j.appender.DEBUGLOG.File=${catalina.home}/logs/pal-debug.log
 log4j.appender.DEBUGLOG.Append=true
 log4j.appender.DEBUGLOG.Threshold=DEBUG
 log4j.appender.DEBUGLOG.layout=org.apache.log4j.PatternLayout
@@ -30,7 +30,7 @@ log4j.appender.DEBUGLOG.MaxBackupIndex=1
 
 # LONGLOG is a file logger that records info-level info
 log4j.appender.LONGLOG=org.apache.log4j.FileAppender
-log4j.appender.LONGLOG.File=pal.log
+log4j.appender.LONGLOG.File=${catalina.home}/logs/pal.log
 log4j.appender.LONGLOG.Append=true
 log4j.appender.LONGLOG.Threshold=INFO
 log4j.appender.LONGLOG.layout=org.apache.log4j.PatternLayout
