--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
@@ -58,22 +58,23 @@
   </welcome-file-list>
 
   <resource-ref>
-  	<description>Datasource to use to access the database</description>
-  	<res-ref-name>jdbc/pal-datasource</res-ref-name>
-	<res-type>javax.sql.DataSource</res-type>
-	<res-auth>Container</res-auth>
+   <description>Datasource to use to access the database</description>
+   <res-ref-name>jdbc/pal-datasource</res-ref-name>
+   <res-type>javax.sql.DataSource</res-type>
+   <res-auth>Container</res-auth>
   </resource-ref>
 
   <env-entry>
-    	<description>URL giving location of the properties file to use for configuration</description>
-  	<env-entry-name>org.astrogrid.config.url</env-entry-name>
-  	<env-entry-type>java.lang.String</env-entry-type>
+      <description>URL giving location of the properties file to use for configuration</description>
+   <env-entry-name>org.astrogrid.config.filename</env-entry-name>
+   <env-entry-type>java.lang.String</env-entry-type>
+   <env-entry-value>datacenter.properties</env-entry-value>
   </env-entry>
   <!--
   <resource-ref>
-  	<res-ref-name>org.astrogrid.config.url</res-ref-name>
-	<res-type>java.lang.String</res-type>
-	<res-auth>Container</res-auth>
+   <res-ref-name>org.astrogrid.config.url</res-ref-name>
+   <res-type>java.lang.String</res-type>
+   <res-auth>Container</res-auth>
   </resource-ref>
 -->
 
