--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
@@ -57,18 +57,19 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 
-  <resource-ref>
+  <!-- causes Tomcat to throw an exception... resource-ref>
    <description>Datasource to use to access the database</description>
    <res-ref-name>jdbc/pal-datasource</res-ref-name>
    <res-type>javax.sql.DataSource</res-type>
    <res-auth>Container</res-auth>
   </resource-ref>
+  -->
 
   <env-entry>
       <description>URL giving location of the properties file to use for configuration</description>
-   <env-entry-name>org.astrogrid.config.filename</env-entry-name>
-   <env-entry-type>java.lang.String</env-entry-type>
-   <env-entry-value>datacenter.properties</env-entry-value>
+      <env-entry-name>org.astrogrid.config.filename</env-entry-name>
+      <env-entry-type>java.lang.String</env-entry-type>
+      <env-entry-value>datacenter.properties</env-entry-value>
   </env-entry>
   <!--
   <resource-ref>
