--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
@@ -57,7 +57,8 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 
-  <!-- causes Tomcat to throw an exception... resource-ref>
+  <!-- causes Tomcat to throw an exception... fix later
+  <resource-ref>
    <description>Datasource to use to access the database</description>
    <res-ref-name>jdbc/pal-datasource</res-ref-name>
    <res-type>javax.sql.DataSource</res-type>
