removed unnecessary checkstyle file, and switched to use astrogrid.name for cvs connections etc

--- a/astrogrid/mySpace/project.properties
+++ b/astrogrid/mySpace/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.12 2004/03/04 18:36:05 jdt Exp $
+# $Id: project.properties,v 1.13 2004/03/08 16:14:15 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/, http://astrogrid.ast.cam.ac.uk/maven
@@ -64,4 +64,7 @@ maven.multiproject.ignoreFailures=true
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
 
+# Custom astrogrid properties
+astrogrid.name=mySpace
