--- a/mavenTemplates/SimpleMavenProject/project.properties
+++ b/mavenTemplates/SimpleMavenProject/project.properties
@@ -58,4 +58,7 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
 
+# Custom astrogrid properties
+astrogrid.name=SimpleMavenProject
