--- a/astrogrid/maven-site/project.properties
+++ b/astrogrid/maven-site/project.properties
@@ -20,4 +20,5 @@ maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 maven.xdoc.version = ${pom.currentVersion}
 maven.xdoc.includeProjectDocumentation=No
 
-
+# Custom astrogrid properties
+astrogrid.name=maven-site
