--- a/astrogrid/common/project.properties
+++ b/astrogrid/common/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.7 2004/03/04 11:19:18 jdt Exp $
+# $Id: project.properties,v 1.8 2004/03/08 16:52:06 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
@@ -47,5 +47,8 @@ maven.multiproject.ignoreFailures=true
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 maven.xdoc.version = ${pom.currentVersion}
+
+# Custom astrogrid properties
+astrogrid.name=common
 
 
