let's see if it works putting it here....

--- a/astrogrid/datacenter/project.properties
+++ b/astrogrid/datacenter/project.properties
@@ -8,3 +8,5 @@ maven.multiproject.includes=*/project.xml,implementations/*/project.xml
 
 
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/
+
+maven.xdoc.version = ${pom.currentVersion}
