--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/log4j.properties
@@ -2,6 +2,7 @@
 # Logs INFO output to console (--> catalina.out), INFO to pal.log, and DEBUG
 # to a rolling log file pal-debug.log
 # -mch
+# $Id: log4j.properties,v 1.8 2004/03/09 13:36:54 mch Exp $
 
 # Set root category (ie default)
 log4j.rootCategory=DEBUG, CONSOLE, DEBUGLOG, LONGLOG
@@ -36,3 +37,7 @@ log4j.appender.LONGLOG.Threshold=INFO
 log4j.appender.LONGLOG.layout=org.apache.log4j.PatternLayout
 log4j.appender.LONGLOG.layout.ConversionPattern=%d{dd-MM-yy HH:mm:ss} %-4r [%t] %-5p - %m%n
 
+# $Log: log4j.properties,v $
+# Revision 1.8  2004/03/09 13:36:54  mch
+# Added CVS tags
+#
