--- a/astrogrid/workflow-objects/project.properties
+++ b/astrogrid/workflow-objects/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.1 2004/02/20 18:39:27 nw Exp $
+# $Id: project.properties,v 1.2 2004/03/09 14:17:35 nw Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -61,3 +61,4 @@ maven.multiproject.ignoreFailures=true
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
