--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/web.xml
@@ -69,7 +69,7 @@
   <env-entry>
       <description>URL giving location of the properties file to use for configuration</description>
       <env-entry-name>org.astrogrid.config.filename</env-entry-name>
-      <env-entry-value>datacenter.properties</env-entry-value>
+      <env-entry-value>${catalina.home}/conf/datacenter.properties</env-entry-value>
       <env-entry-type>java.lang.String</env-entry-type>
   </env-entry>
   <!--
