--- a/astrogrid/workflow/project.properties
+++ b/astrogrid/workflow/project.properties
@@ -34,4 +34,6 @@ maven.tasklist.taskTag=@TODO
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
+maven.xdoc.version = ${pom.currentVersion}
+
 
