Fixed the Maven deploy goals

--- a/astrogrid/community/maven/maven.properties
+++ b/astrogrid/community/maven/maven.properties
@@ -8,10 +8,16 @@
 #
 # <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/maven/maven.properties,v $</cvs:source>
 # <cvs:author>$Author: dave $</cvs:author>
-# <cvs:date>$Date: 2004/03/05 17:19:59 $</cvs:date>
-# <cvs:version>$Revision: 1.5 $</cvs:version>
+# <cvs:date>$Date: 2004/03/09 17:18:47 $</cvs:date>
+# <cvs:version>$Revision: 1.6 $</cvs:version>
 # <cvs:log>
 #   $Log: maven.properties,v $
+#   Revision 1.6  2004/03/09 17:18:47  dave
+#   Fixed the Maven deploy goals
+#
+#   Revision 1.5.10.1  2004/03/09 16:47:07  dave
+#   Fixed site deployment goal
+#
 #   Revision 1.5  2004/03/05 17:19:59  dave
 #   Merged development branch, dave-dev-200402211936, into HEAD
 #
@@ -64,6 +70,17 @@
 #
 
 #
+# Deployment locations
+maven.repo.central.directory=/var/www/www/maven
+maven.site.central.directory=/var/www/www/maven/build/community
+
+#
+# Custom deployment locations
+# Define these in ${userdir}/build.properties
+#astrogrid.community.deploy.path=/var/maven/remote
+#astrogrid.community.deploy.site=/var/projects/astrogrid/site
+
+#
 # Allow assertions
 maven.compile.source=1.4
 maven.compile.target=1.4
@@ -80,6 +97,10 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/,http://www.castor.o
 http://www.astrogrid.org/maven/build/community/multiproject/astrogrid-community-common/apidocs/,\
 http://www.astrogrid.org/maven/build/community/multiproject/astrogrid-community-client/apidocs/,\
 http://www.astrogrid.org/maven/build/community/multiproject/astrogrid-community-server/apidocs/
+
+#
+# Javadoc overview (needs to be in sub-projects)
+#maven.javadoc.overview=${basedir}/src/java/org/astrogrid/applications/overview.html
 
 #
 # JavaDoc properties
@@ -110,21 +131,4 @@ maven.xdoc.date.format=EE dd MMMM yy - HH:mm:ss
 # UI
 maven.ui.section.background=#00f
 maven.ui.banner.background=#00f
-
-#
-# Deployment - settings for jar
-#maven.repo.central=www.astrogrid.org
-#maven.repo.central.directory=/var/www/www/maven
-#maven.remote.group=cvs
-
-#
-# Deployment - settings for artifact / war.
-# see http://nagoya.apache.org/eyebrowse/ReadMsg?listName=users@maven.apache.org&msgNo=8046
-# and http://maven.apache.org/reference/plugins/artifact/examples.html
-# This just does a local file copy on the build machine.
-#maven.repo.list=astrogrid
-#maven.repo.astrogrid=file:///var/www/www/
-#maven.repo.astrogrid.directory=maven
-#maven.repo.astrogrid.username=maven
-#maven.repo.astrogrid.group=cvs
 
