--- a/astrogrid/community/project.properties
+++ b/astrogrid/community/project.properties
@@ -3,10 +3,16 @@
 #
 # <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/project.properties,v $</cvs:source>
 # <cvs:author>$Author: dave $</cvs:author>
-# <cvs:date>$Date: 2004/03/05 17:19:59 $</cvs:date>
-# <cvs:version>$Revision: 1.6 $</cvs:version>
+# <cvs:date>$Date: 2004/03/09 17:18:47 $</cvs:date>
+# <cvs:version>$Revision: 1.7 $</cvs:version>
 # <cvs:log>
 #   $Log: project.properties,v $
+#   Revision 1.7  2004/03/09 17:18:47  dave
+#   Fixed the Maven deploy goals
+#
+#   Revision 1.6.10.1  2004/03/09 16:47:07  dave
+#   Fixed site deployment goal
+#
 #   Revision 1.6  2004/03/05 17:19:59  dave
 #   Merged development branch, dave-dev-200402211936, into HEAD
 #
@@ -30,4 +36,8 @@ maven.multiproject.excludes=
 #
 # The repository Maven should use to download artifacts (jars etc) that it can't find in the local repository.
 maven.repo.remote=http://www.astrogrid.org/maven, http://www.ibiblio.org/maven
+
+# Checkstyle file
+#maven.checkstyle.properties=${basedir}/../maven-base/checkstyle.xml
+
 
