*** empty log message ***

--- a/astrogrid/registry/server/project.properties
+++ b/astrogrid/registry/server/project.properties
@@ -6,7 +6,8 @@
 maven.multiproject.type=jar
 
 org.astrogrid.config.url=file:///${basedir}/config/config.prop
+org.astrogrid.registry.junitcache.url=file:///${basedir}/config/junitcache
 org.astrogrid.registry.junitcache.build.url=file:///${maven.build.dir}/junit/xml
-maven.junit.sysproperties=org.astrogrid.config.url org.astrogrid.registry.junitcache.build.url
+maven.junit.sysproperties=org.astrogrid.config.url org.astrogrid.registry.junitcache.build.url org.astrogrid.registry.junitcache.url
 
 
