--- a/astrogrid/registry/maven/maven.properties
+++ b/astrogrid/registry/maven/maven.properties
@@ -41,6 +41,7 @@ maven.junit.fork=true
 maven.xdoc.developmentProcessUrl=http://wiki.astrogrid.org/bin/view/Astrogrid/DevelopmentDocs
 maven.xdoc.date=left
 maven.xdoc.date.format=EE dd MMMM yy - HH:mm:ss
+maven.xdoc.version = SNAPSHOT
 
 #
 # UI
