added martin's suggested log4j file.

--- a/astrogrid/jes/src/java/log4j.properties
+++ b/astrogrid/jes/src/java/log4j.properties
@@ -1,25 +1,39 @@
-# $Id: log4j.properties,v 1.2 2004/02/13 18:10:30 jdt Exp $
-# Author: JDT
-############################################################################################
-#
-#    Logging properties.  All being well these should be picked up automatically by log4j
-#
-############################################################################################
-#
-# Set root category priority to FATAL and its only appenders to CONSOLE and a logfile LOGFILE.
-# Change OFF to DEBUG for more detailed logging
-log4j.rootCategory=ERROR,  JESLOG
-
-
-#### CONSOLE is set to be a ConsoleAppender using a PatternLayout.
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=OFF
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
-
-### File log
-log4j.appender.JESLOG=org.apache.log4j.FileAppender
-log4j.appender.JESLOG.File=jestest.log
-log4j.appender.JESLOG.Append=FALSE
-log4j.appender.JESLOG.layout=org.apache.log4j.PatternLayout
-log4j.appender.JESLOG.layout.ConversionPattern=%-5p [%t] %c{1}/%L: %m%n
+# Datacenter logging properties file 
+ # Logs INFO output to console (--> catalina.out), INFO to jes.log, and DEBUG 
+ # to a rolling log file jes-debug.log 
+ # -mch 
+ 
+ # Set root category (ie default) 
+ log4j.rootCategory=DEBUG, CONSOLE, DEBUGLOG, LONGLOG 
+ 
+ # Set the enterprise logger 
+ log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE, DEBUGLOG, LONGLOG 
+ 
+ # ignore debug axis messages 
+ log4j.category.org.apache.axis=WARN, CONSOLE, DEBUGLOG, LONGLOG 
+ 
+ # CONSOLE goes to catalina.out 
+ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender 
+ log4j.appender.CONSOLE.Threshold=INFO 
+ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout 
+ log4j.appender.CONSOLE.layout.ConversionPattern=%d{dd-MM-yy HH:mm:ss} JES: %p %m%n 
+ 
+ # DEBUGLOG is a rolling file logger that records debug-level info 
+ log4j.appender.DEBUGLOG=org.apache.log4j.RollingFileAppender 
+ log4j.appender.DEBUGLOG.File=${catalina.home}/logs/jes-debug.log 
+ log4j.appender.DEBUGLOG.Append=true 
+ log4j.appender.DEBUGLOG.Threshold=DEBUG 
+ log4j.appender.DEBUGLOG.layout=org.apache.log4j.PatternLayout 
+ log4j.appender.DEBUGLOG.layout.ConversionPattern=%d{HH:mm:ss} %-4r [%t] %-5p %c %x - %m%n 
+ log4j.appender.DEBUGLOG.MaxFileSize=400KB 
+ log4j.appender.DEBUGLOG.MaxBackupIndex=1 
+ 
+ # LONGLOG is a file logger that records info-level info 
+ log4j.appender.LONGLOG=org.apache.log4j.FileAppender 
+ log4j.appender.LONGLOG.File=${catalina.home}/logs/jes.log 
+ log4j.appender.LONGLOG.Append=true 
+ log4j.appender.LONGLOG.Threshold=INFO 
+ log4j.appender.LONGLOG.layout=org.apache.log4j.PatternLayout 
+ log4j.appender.LONGLOG.layout.ConversionPattern=%d{dd-MM-yy HH:mm:ss} %-4r [%t] %-5p %c - %m%n 
+ 
+ 
