--- a/astrogrid/common/project.properties
+++ b/astrogrid/common/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.8 2004/03/08 16:52:06 jdt Exp $
+# $Id: project.properties,v 1.9 2004/03/12 13:35:00 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
@@ -49,6 +49,7 @@ maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 maven.xdoc.version = ${pom.currentVersion}
 
 # Custom astrogrid properties
+# This property is used in the POM to create the CVS path etc
 astrogrid.name=common
 
 
