Removed extra import in IvornTest. Fixed redundant '#' in Ivorn with no fragment. Fixed missing new-line at end of file.

--- a/astrogrid/common/project.properties
+++ b/astrogrid/common/project.properties
@@ -1,4 +1,8 @@
-# $Id: project.properties,v 1.9 2004/03/12 13:35:00 jdt Exp $
+# $Id: project.properties,v 1.10 2004/03/12 15:11:33 dave Exp $
+
+#
+# Added to allow deprecated APIs
+maven.compile.deprecation=on
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
