--- a/astrogrid/applications/src/webapp/WEB-INF/classes/log4j.properties
+++ b/astrogrid/applications/src/webapp/WEB-INF/classes/log4j.properties
@@ -1,11 +1,39 @@
-
-## Set the enterprise logger category to FATAL and its only appender to CONSOLE.
-#log4j.logger.org.astrogrid.applications=DEBUG, APPCONLOG, CONSOLE
-#
-## APPCONLOG is set to be a File appender using a PatternLayout.
-#log4j.appender.APPCONLOG=org.apache.log4j.FileAppender
-#log4j.appender.APPCONLOG.File=logs/applicationController.log
-#log4j.appender.APPCONLOG.Append=true
-#log4j.appender.APPCONLOG.Threshold=ALL
-#log4j.appender.APPCONLOG.layout=org.apache.log4j.PatternLayout
-#log4j.appender.APPCONLOG.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+# Datacenter logging properties file 
+ # Logs INFO output to console (--> catalina.out), INFO to cea.log, and DEBUG 
+ # to a rolling log file cea-debug.log 
+ # -mch 
+ 
+ # Set root category (ie default) 
+ log4j.rootCategory=DEBUG, CONSOLE, DEBUGLOG, LONGLOG 
+ 
+ # Set the enterprise logger 
+ log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE, DEBUGLOG, LONGLOG 
+ 
+ # ignore debug axis messages 
+ log4j.category.org.apache.axis=WARN, CONSOLE, DEBUGLOG, LONGLOG 
+ 
+ # CONSOLE goes to catalina.out 
+ log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender 
+ log4j.appender.CONSOLE.Threshold=INFO 
+ log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout 
+ log4j.appender.CONSOLE.layout.ConversionPattern=%d{dd-MM-yy HH:mm:ss} CEA: %p %m%n 
+ 
+ # DEBUGLOG is a rolling file logger that records debug-level info 
+ log4j.appender.DEBUGLOG=org.apache.log4j.RollingFileAppender 
+ log4j.appender.DEBUGLOG.File=${catalina.home}/logs/cea-debug.log 
+ log4j.appender.DEBUGLOG.Append=true 
+ log4j.appender.DEBUGLOG.Threshold=DEBUG 
+ log4j.appender.DEBUGLOG.layout=org.apache.log4j.PatternLayout 
+ log4j.appender.DEBUGLOG.layout.ConversionPattern=%d{HH:mm:ss} %-4r [%t] %-5p %c %x - %m%n 
+ log4j.appender.DEBUGLOG.MaxFileSize=400KB 
+ log4j.appender.DEBUGLOG.MaxBackupIndex=1 
+ 
+ # LONGLOG is a file logger that records info-level info 
+ log4j.appender.LONGLOG=org.apache.log4j.FileAppender 
+ log4j.appender.LONGLOG.File=${catalina.home}/logs/cea.log 
+ log4j.appender.LONGLOG.Append=true 
+ log4j.appender.LONGLOG.Threshold=INFO 
+ log4j.appender.LONGLOG.layout=org.apache.log4j.PatternLayout 
+ log4j.appender.LONGLOG.layout.ConversionPattern=%d{dd-MM-yy HH:mm:ss} %-4r [%t] %-5p %c - %m%n 
+ 
+ 
