changed location of services

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,5 +1,5 @@
-mySpaceEndPoint = http://uml01.astrogrid.org:8080/intTest-mySpace/services/MySpaceManager
-merlinDatacenterEndPoint=http://vm07.astrogrid.org:8080/pal/services/AxisDataServer
+mySpaceEndPoint = http://uml03.astrogrid.org:8080/astrogrid-mySpace/services/MySpaceManager
+merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
 
 
 
