--- a/astrogrid/workflow-objects/project.properties
+++ b/astrogrid/workflow-objects/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.2 2004/03/09 14:17:35 nw Exp $
+# $Id: project.properties,v 1.3 2004/03/13 00:20:19 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.astrogrid.org/maven/, http://www.ibiblio.org/maven
@@ -62,3 +62,7 @@ maven.multiproject.ignoreFailures=true
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 maven.xdoc.version = ${pom.currentVersion}
+
+# Custom astrogrid properties
+# This property is used in the POM to create the CVS path etc
+astrogrid.name=astrogrid-workflow-objects
