--- a/astrogrid/integrationTests/project.properties
+++ b/astrogrid/integrationTests/project.properties
@@ -1,4 +1,4 @@
-# $Id: project.properties,v 1.2 2004/02/07 00:52:45 jdt Exp $
+# $Id: project.properties,v 1.3 2004/03/13 01:03:17 jdt Exp $
 
 # Remote repository location.
 maven.repo.remote=http://www.ibiblio.org/maven/, http://www.astrogrid.org/maven/, http://astrogrid.ast.cam.ac.uk/maven
@@ -51,3 +51,6 @@ maven.multiproject.ignoreFailures=true
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 
+# Custom astrogrid properties
+# This property is used in the POM to create the CVS path etc
+astrogrid.name=integrationTests
