Test fixes and better front-end JSP access

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
@@ -13,14 +13,17 @@
 ###
 
 ### The default configuration has a dummy querier that returns an example votable
+datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
 
-DatabaseQuerierClass=org.astrogrid.datacenter.sitedebug.DummyQuerier
+### Where to find the metadata
+#datacenter.metadata.filename
+#datacenter.metadata.url
 
 ## Enables SQL-Passthru
+##
 ## Do not enable this unless you understand the concequences and have taken measures to protect your
 ## database from malicious queries.
-
-SqlQueryTranslator.passthru.enabled=false
+datacenter.sql.passthrough.enabled=false
 
 ###
 ### Workspace Configuration
