Added CVS format and emailer

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
@@ -15,9 +15,16 @@
 ### The default configuration has a dummy querier that returns an example votable
 datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
 
+###
 ### Where to find the metadata
+###
 #datacenter.metadata.filename
 #datacenter.metadata.url
+
+###
+### emailer server name for emailing results
+###
+datacenter.emailserver.address=smtp.dial.pipex.com
 
 ## Enables SQL-Passthru
 ##
