--- a/astrogrid/warehouse/ogsadai/project.properties
+++ b/astrogrid/warehouse/ogsadai/project.properties
@@ -34,4 +34,4 @@ maven.javaapp.mainclass=org.astrogrid.warehouse.ogsadai.GdsQueryDelegate
 # Build this kind of thing as the main purpose of this project.
 maven.multiproject.type=javaapp
 
-maven.javaapp.jar.name=astrogrid-ogsadai-app-HEAD.jar
+maven.javaapp.jar.name=astrogrid-ogsadai-app-${pom.currentVersion}.jar
