--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
@@ -5,18 +5,7 @@
 ####################################################################
 
 ###
-### Plugin Configuration : REQUIRED
-###
-### You must specify a back-end implementation to use. The implementation class
-### may either extend Querier, or implement the QuerierSPI interface. Configuration
-### is different for each case.
-###
-
-### The default configuration has a dummy querier that returns an example votable
-datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
-
-###
-### Where to find the metadata
+### Where to find the metadata : REQUIRED for publishing to the Virtual Observatory
 ###
 #datacenter.metadata.filename
 #datacenter.metadata.url
@@ -24,13 +13,8 @@ datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
 ###
 ### emailer server name for emailing results
 ###
-datacenter.emailserver.address=smtp.dial.pipex.com
-
-## Enables SQL-Passthru
-##
-## Do not enable this unless you understand the concequences and have taken measures to protect your
-## database from malicious queries.
-datacenter.sql.passthrough.enabled=false
+#datacenter.emailserver.address=smtp.roe.ac.uk
+#datacenter.emailserver.from=pal@roe.ac.uk
 
 ###
 ### Workspace Configuration
@@ -39,6 +23,44 @@ datacenter.sql.passthrough.enabled=false
 ### Default setting should work for unices. Needs to be altered for a Windows installation.
 ###
 WorkspaceDirectory=/tmp
+
+###
+### Plugin Configuration : REQUIRED
+###
+### You must specify a back-end implementation to use. The implementation class
+### must extend QuerierPlugin
+###
+
+### The default configuration has a dummy querier that returns an example votable
+datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
+
+###
+### JDBC Connection details
+###
+### These are the settings required to connect to a
+### RDBMS.  It is also possible to use a JNDI datasource with the key pal/datasource.
+### The examples here are for a microsoft SQL Server connection.
+###
+#DatabaseQuerier.JdbcDrivers=com.microsoft.jdbc.sqlserver.SQLServerDriver
+#DatabaseQuerier.JdbcUrl=jdbc:microsoft:sqlserver://<authorityid>;Database=<db>
+#DatabaseQuerier.User=
+#DatabaseQuerier.Password=
+
+###
+### Enables SQL-Passthru
+###
+### Do not enable this unless you understand the concequences and have taken measures to protect your
+### database from malicious queries.
+###
+datacenter.sql.passthrough.enabled=false
+
+###
+### Cone Search configuration - these are the columns that will be used when
+### a cone search is submitted to a RDBMS.
+###
+conesearch.table=TARGET
+conesearch.ra.column=RA
+conesearch.dec.column=DEC
 
 
 
