Made jdbc keys more consistent

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
@@ -32,7 +32,7 @@ WorkspaceDirectory=/tmp
 ###
 
 ### The default configuration has a dummy querier that returns an example votable
-datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
+datacenter.querier.plugin=org.astrogrid.datacenter.queriers.ogsadai.WarehouseQuerier
 
 ###
 ### JDBC Connection details
@@ -41,10 +41,10 @@ datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
 ### RDBMS.  It is also possible to use a JNDI datasource with the key pal/datasource.
 ### The examples here are for a microsoft SQL Server connection.
 ###
-#DatabaseQuerier.JdbcDrivers=com.microsoft.jdbc.sqlserver.SQLServerDriver
-#DatabaseQuerier.JdbcUrl=jdbc:microsoft:sqlserver://<authorityid>;Database=<db>
-#DatabaseQuerier.User=
-#DatabaseQuerier.Password=
+#datacenter.plugin.jdbc.drivers=com.microsoft.jdbc.sqlserver.SQLServerDriver
+#datacenter.plugin.jdbc.url=jdbc:microsoft:sqlserver://<authorityid>;Database=<db>
+#datacenter.plugin.jdbc.user=
+#datacenter.plugin.jdbc.password=
 
 ###
 ### Enables SQL-Passthru
