Lots of fixes to status updates

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
@@ -31,7 +31,7 @@ WorkspaceDirectory=/tmp
 ### must extend QuerierPlugin
 ###
 ### The default configuration has a dummy querier
-datacenter.querier.plugin=org.astrogrid.datacenter.queriers.sql.test.DummySqlPlugin
+datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
 
 
 ### -- SQL --
