Added default maxreturn

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
@@ -44,6 +44,13 @@ datacenter.querier.plugin=org.astrogrid.datacenter.queriers.test.DummySqlPlugin
 datacenter.sql.passthrough.enabled=false
 
 ##
+## Limited results
+##
+## Sets the maximum number of rows that can be returned by an SQL query.  This is
+## a crude safety limit to avoid full datacenter readouts in VOTable...
+datacenter.sql.maxreturn=200
+
+##
 ## Cone Search configuration - these are the columns that will be used when
 ## a cone search is submitted to a RDBMS.
 ###
