added job monitor endpoiint

--- a/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
+++ b/astrogrid/integrationTests/auto-integration/webapps/astrogrid-configuration/AstroGridConfig.properties
@@ -11,6 +11,9 @@ jes.jobfactory.file.basedir=@WORKDIR@/jes
 jes.locator=xml
 jes.locator.xml.url=@CONFIGPATH@/tools.xml
 
+# set endpoint for JobMonitor callback.
+jes.monitor.endpoint.url=@TOMCATROOT@/astrogrid-jes-SNAPSHOT/services/JobMonitorService
+
 
 #####
 ### Application Controller configuration
