Checkpoint: end of client-side work; now moving to server side.  All tests except "MsPasswordTest" are passed.

--- a/astrogrid/security/project.properties
+++ b/astrogrid/security/project.properties
@@ -1,5 +1,5 @@
 # Remote repository location.
-maven.repo.remote=http://www.ibiblio.org/maven,http://www.astrogrid.org/maven/
+maven.repo.remote=http://www.ibiblio.org/maven,http://capc49.ast.cam.ac.uk/maven/
 # ChangeLog
 maven.changelog.range=31
 
@@ -29,3 +29,5 @@ maven.javadoc.links=http://java.sun.com/j2se/1.4.2/docs/api/, http://maven.apach
 
 maven.compile.source=1.4
 maven.compile.target=1.4
+
+maven.xdoc.version=${pom.currentVersion}
