Brought up to date for astrogrid goals.

--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -33,8 +33,16 @@ maven.war.src=${basedir}/site
 
 # Multiproject Configuration
 maven.multiproject.excludes=project.xml,explorer/project.xml,subproject-template/project.xml
+# expect this to be a *temporary* solution!
+maven.multiproject.ignoreFailures=true
+
 
 # Display the date on the Maven web site
 maven.xdoc.date = left
 maven.xdoc.date.format = dd MMMM yyyy HH:mm z
 maven.xdoc.version = ${pom.currentVersion}
+
+# used for the cvs connection string etc
+astrogrid.name=portal
+
+'
