--- a/astrogrid/portal/project.properties
+++ b/astrogrid/portal/project.properties
@@ -32,7 +32,7 @@ maven.repo.astrogrid.group=cvs
 maven.war.src=${basedir}/site
 
 # Multiproject Configuration
-maven.multiproject.excludes=project.xml,explorer/project.xml,subproject-template/project.xml,datacenter/project.xml,myspace/project.xml,workflow/project.xml
+maven.multiproject.excludes=project.xml,explorer/project.xml,subproject-template/project.xml,datacenter/project.xml,myspace/project.xml,workflow/project.xml,registry/project.xml
 # expect this to be a *temporary* solution!
 maven.multiproject.ignoreFailures=true
 
