Removed datacenter prefix from emailing keys

--- a/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
+++ b/astrogrid/datacenter/pal/src/webapp/WEB-INF/classes/default.properties
@@ -13,8 +13,8 @@
 ###
 ### emailer server name for emailing results
 ###
-#datacenter.emailserver.address=smtp.roe.ac.uk
-#datacenter.emailserver.from=pal@roe.ac.uk
+#emailserver.address=smtp.roe.ac.uk
+#emailserver.from=pal@roe.ac.uk
 
 ###
 ### Workspace Configuration
