--- a/astrogrid/security/project.properties
+++ b/astrogrid/security/project.properties
@@ -1,5 +1,5 @@
 # Remote repository location.
-maven.repo.remote=http://www.ibiblio.org/maven,http://capc49.ast.cam.ac.uk/maven/
+maven.repo.remote=http://www.ibiblio.org/maven,http://www.astrogrid.org/maven/
 # ChangeLog
 maven.changelog.range=31
 
