Tarted up docs and added checkstyle

--- a/astrogrid/portal/login/project.properties
+++ b/astrogrid/portal/login/project.properties
@@ -2,6 +2,9 @@
 maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/,http://www.astrogrid.org/maven-cocoon/
 #maven.repo.remote=http://codon.demon.co.uk/installs/java/maven, http://capc49.ast.cam.ac.uk/maven, http://astrogrid.ast.cam.ac.uk/maven, http://www.astrogrid.org/maven, http://www.astrogrid.org/maven-cocoon/, http://www.ibiblio.org/maven
 
+# Checkstyle file
+maven.checkstyle.properties=${basedir}/../../maven-base/checkstyle.xml
+
 # ChangeLog
 maven.changelog.range=31
 
