--- a/astrogrid/portal/login/project.properties
+++ b/astrogrid/portal/login/project.properties
@@ -4,6 +4,7 @@ maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/,
 
 # Checkstyle file
 maven.checkstyle.properties=${basedir}/../../maven-base/checkstyle.xml
+maven.license.licenseFile=${basedir}/../../maven-base/LICENSE.txt
 
 # ChangeLog
 maven.changelog.range=31
