Semi-random changes; trying to keep up with Maven's random behaviour.

--- a/astrogrid/security/sample/project.properties
+++ b/astrogrid/security/sample/project.properties
@@ -1,5 +1,5 @@
 # Remote repository location.
-maven.repo.remote=http://www.ibiblio.org/maven,http://www.astrogrid.org/maven/
+maven.repo.remote=http://www.ibiblio.org/maven/,http://www.astrogrid.org/maven/
 # ChangeLog
 maven.changelog.range=31
 
