--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,5 +1,8 @@
-mySpaceEndPoint = http://uml03.astrogrid.org:8080/astrogrid-mySpace/services/MySpaceManager
+mySpaceEndPoint = http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/MySpaceManager
 merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
+portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal-night/
+jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
+stdDatacenterEndPoint=http://uml03.astrogrid.org:8080/astrogrid-pal-night/
 
 
 
