Refactored ConfManager to use the astrogrid config class

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,9 +1,10 @@
-mySpaceEndPoint = http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/MySpaceManager
+mySpaceEndPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/MySpaceManager
 merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
 portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal-night/
 jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
-stdDatacenterEndPoint=http://uml03.astrogrid.org:8080/astrogrid-pal-night/
-
+stdDatacenterEndPoint=http://uml03.astrogrid.org:8080/astrogrid-pal-night/services/AxisDataServer
+#Please don't delete this!  It's used by ConfManagerTest
+test.property=test
 
 
 
