added a couple more urls to test.

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,8 +1,12 @@
-mySpaceEndPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/MySpaceManager
-merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
+appController.endPoint=http://uml03.astrogrid.org:8080/astrogrid-applications-night/services/AdminService
+community.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/AdminService
+mySpaceEndPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/Manager
+
 portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal-night/
 jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
 stdDatacenterEndPoint=http://uml03.astrogrid.org:8080/astrogrid-pal-night/services/AxisDataServer
+merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
+
 #Please don't delete this!  It's used by ConfManagerTest
 test.property=test
 
