--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -5,7 +5,7 @@ mySpaceEndPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services
 portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal-night/
 jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
 stdDatacenterEndPoint=http://uml03.astrogrid.org:8080/astrogrid-pal-night/services/AxisDataServer
-merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
+#merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
 
 #Please don't delete this!  It's used by ConfManagerTest
 test.property=test
