Added new error codes.

--- a/astrogrid/mySpace/configFiles/ASTROGRID_myspacemanagermessages.properties
+++ b/astrogrid/mySpace/configFiles/ASTROGRID_myspacemanagermessages.properties
@@ -8,6 +8,11 @@ AGMMCZ00004=AGDTCZ00004:Message: Message pattern or inserts are invalid
 AGMMCZ00005=AGDTCZ00005:Message: Message not found in ResourceBundle
 
 #
+# Information code for success.
+
+AGMMCI00001=({0}) Success.
+
+#
 # General error codes.
 
 AGMMCE00030=({0}) Error writing error codes to standard output.
