added registry endpoints

--- a/astrogrid/integrationTests/test/java/webservices.properties
+++ b/astrogrid/integrationTests/test/java/webservices.properties
@@ -1,11 +1,31 @@
+#Registry
+registry.registry.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/Registry
+registry.admin.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryAdmin
+registry.harvest.endpoint=http://uml03.astrogrid.org:8080/astrogrid-registry-night/services/RegistryHarvest
+
+#Applications Controller
 appController.endPoint=http://uml03.astrogrid.org:8080/astrogrid-applications-night/services/AdminService
+
+
+#Community
 community.endPoint=http://uml03.astrogrid.org:8080/astrogrid-community-night/services/AdminService
+
+#MySpace
 mySpaceEndPoint=http://uml03.astrogrid.org:8080/astrogrid-mySpace-night/services/Manager
 
+#Portal
 portalWebSite=http://uml03.astrogrid.org:8080/astrogrid-portal-night/
+
+#Job Controller
 jobControlerEndPoint=http://uml03.astrogrid.org:8080/astrogrid-jes-night/
+
+#DataCentre
 stdDatacenterEndPoint=http://uml03.astrogrid.org:8080/astrogrid-pal-night/services/AxisDataServer
 #merlinDatacenterEndPoint=http://uml03.astrogrid.org:8080/pal-Itn04_1/services/AxisDataServer
+
+
+
+
 
 #Please don't delete this!  It's used by ConfManagerTest
 test.property=test
